--- a/src/Components/MakeChat/MakeChat.css
+++ b/src/Components/MakeChat/MakeChat.css
@@ -13,3 +13,24 @@
     margin: auto;
     color: black;
 }
+
+.makeChat-name {
+    border: 1px solid black;
+    padding: 4px;
+    width: 300px;
+    height: 60px;
+    box-sizing: border-box;
+} 
+
+.makeChat-btn {
+    padding: 4px;
+    width: 100px;
+    height: 60px;
+    box-sizing: border-box;
+    border: 0px;
+    background-color: rgb(201, 228, 197);
+}
+
+.makeChat-btn:hover {
+    background-color: rgb(181, 205, 163);
+}
