--- a/src/Components/GatheringChat/GatheringChat.css
+++ b/src/Components/GatheringChat/GatheringChat.css
@@ -46,12 +46,12 @@
     margin-left: 60%;
     color: black;
     text-align: right;
-    border: 1px solid black;
     padding: 10px 5px;
     word-break:break-all;
     border-radius: 5px;
     font-size: 15px;
     font-weight: 500;
+    background-color: rgb(193, 172, 149);
 }
 
 .left-chat-word {
@@ -60,12 +60,12 @@
     margin-right: 60%;
     color: black;
     text-align: left;
-    border: 1px solid black;
     padding: 10px 5px;
     word-break:break-all;
     border-radius: 5px;
     font-size: 15px;
     font-weight: 500;
+    background-color: rgb(201, 228, 197);
 }
 
 .right-createdAt {
@@ -86,9 +86,16 @@
     justify-content: left;
 }
 
-.chatRef {
-    width: 200px;
-    height: 20px;
-    background-color: blue;
-    margin: 0 auto;
+.send-btn {
+    background-color: rgb(201, 228, 197);
+    border: 0px;
+}
+
+.send-btn:hover {
+    background-color: rgb(181, 205, 163);
+}
+
+textarea {
+    border: 2px solid black;
+    border-top: 0px;
 }
