--- a/src/Components/GatheringHome/GatheringHome.css
+++ b/src/Components/GatheringHome/GatheringHome.css
@@ -18,8 +18,40 @@
     width: 300px;
     height: 300px;
     margin: 0 5px;
-    border: 1px solid black;
-    border-radius: 10px;
+    border: 3px solid rgb(193, 172, 149);
+    border-radius: 50%;
+    margin-right: 30px;
+    animation-name: _img;
+    animation-duration: 2s;
+    animation-delay: 0;
+    animation-iteration-count: 1;
+}
+
+@keyframes _content {
+    0% {
+        color: white;
+    }
+    25% {
+        color: rgb(170, 170, 170);
+    }
+    50% {
+        color: gray;
+    }
+    75% {
+        color: rgb(73, 73, 73);
+    }
+    100% {
+        color: black;
+    }
+}
+
+@keyframes _img {
+    0% {
+        transform: scale(1.3);
+    }
+    100% {
+        transform: scale(1);
+    }
 }
 
 .GatheringHome > section > .studyContent{
@@ -27,15 +59,25 @@
     color: black;
     width: 50%;
     height: 300px;
-    
+    position: relative;
+    animation-name: _content;
+    animation-duration: 2s;
+    animation-delay: 0;
+    animation-iteration-count: 1;
 }
+
+
 
 .GatheringHome > section > div > .studyTitle {
     color: black;
     font-size: 32px;
     text-align: left;
-    font-weight: 700;
+    font-weight: 400;
     letter-spacing: -0.009em;
+    animation-name: _content;
+    animation-duration: 2s;
+    animation-delay: 0;
+    animation-iteration-count: 1;
 }
 
 .GatheringHome > section > .studyContent > div {
@@ -60,12 +102,20 @@ table {
     border-spacing: 2px;
     border-color: gray;
     height: 150px;
+    animation-name: _content;
+    animation-duration: 2s;
+    animation-delay: 0;
+    animation-iteration-count: 1;
 }
 
 tbody {
     display: table-row-group;
     vertical-align: middle;
     border-color: inherit;
+    animation-name: _content;
+    animation-duration: 2s;
+    animation-delay: 0;
+    animation-iteration-count: 1;
 }
 
 tr {
@@ -84,9 +134,17 @@ td {
     display: table-cell;
     color: black;
     text-align: left;
+    animation-name: _content;
+    animation-duration: 2s;
+    animation-delay: 0;
+    animation-iteration-count: 1;
 }
 
 .t-label {
     width: 6rem;
     padding-left: 0.125rem;
+}
+
+.t-icon {
+    width: 50px;
 }
