--- a/src/Components/MakeGathering/MakeGathering.css
+++ b/src/Components/MakeGathering/MakeGathering.css
@@ -63,12 +63,56 @@
 .time-box {
     display: flex;
     align-items: center;
+    margin-bottom: 30px;
 }
 
 .timePicker > section {
     width: 300px;
 }
 
+.col-md-3 div {
+    z-index: 3;
+}
+
+.col-md-2 div {
+    z-index: 3;
+}
+
 .col-md-2 > div > * {
     color: black;
+}
+
+.col-md-3 > div > * {
+    color: black;
+}
+
+.gathering-map {
+    width: 400px;
+    height: 400px;
+}
+
+.gathering-map-box {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.col-md-5 div {
+    z-index: 2;
+}
+
+.make-gathering-contents {
+    width: 100%;
+    height: 300px;
+    overflow-y: scroll;
+    margin-top: 30px;
+    resize: none;
+}
+
+.place-input input {
+    width: 400px;
+    border: 1px solid black;
+    margin-top: 20px;
 }
