--- a/src/Components/MyPage/MyPage.css
+++ b/src/Components/MyPage/MyPage.css
@@ -74,14 +74,18 @@
 .updateBtn {
     width: 200px;
     margin: 0 auto;
-    border: 1px solid black;
-    border-radius: 5px;
+    border-radius: 50px;
     background-color: white;
-    padding: 3px;
+    padding: 10px 80px;
+}
+
+.updateBtn:hover {
+    background-color: rgba(0, 100, 0, 0.5);
+    color: white;
 }
 
 .MyPageTag {
-    display: block;
+    display: flex;
     margin: 0 10px;
     border-radius: 5px;
     background-color: white;
@@ -89,6 +93,8 @@
     padding: 3px 3px;
     white-space : nowrap;
     color: black;
+    justify-content: center;
+    align-items: center;
 }
 
 .info > div > .tags {
@@ -119,7 +125,7 @@
 .MyPage > .middle > .profile-box{
     width: 320px;
     height: 300px;
-    background-color: black;
+    background-color: rgba(0, 40, 0, 0.5);
     margin: 0;
     border-radius: 5px;
 }
