--- a/src/Components/MyStudy/MyStudy.css
+++ b/src/Components/MyStudy/MyStudy.css
@@ -8,7 +8,8 @@
 
 .MyStudy-box {
     width: 60%;
-    border: 3px solid black;
+    background-color: rgb(201, 228, 197);
+    border-radius: 15px;
     margin-top: 10px;
     margin-bottom: 10px;
     display: flex;
@@ -16,4 +17,21 @@
     text-align: left;
     padding: 3px;
     font-size: 20px;
+    padding-left: 20px;
+    font-weight: 400;
+}
+
+.MyStudy-box:hover {
+    background-color: rgb(181, 205, 163);
+    transform: scale(1.05);
+    transition: 0.3s;
+}
+
+.myStudy-header {
+    width: 100%;
+    color: black;
+    font-size: 30px;
+    margin-bottom: 30px;
+    font-weight: 400;
+    margin-top: 30px;
 }
