--- a/src/Components/SearchMenu/SearchMenu.css
+++ b/src/Components/SearchMenu/SearchMenu.css
@@ -4,9 +4,11 @@
     justify-content: center;
     width: 100%;
     flex-flow: wrap;
-    height: 50px;
+    
     margin-bottom: 30px;
-    background-color: black;
+    background-color: rgb(250, 235, 224);
+    padding-bottom: 20px;
+    padding-top: 20px;
 }
 
 .search-wrap {
@@ -36,8 +38,8 @@
     width: 400px;
     height: 38px;
     padding: 8px 12px;
-    border-radius: 5px;
-    border: 2px solid black;
+    border-radius: 15px;
+    border: 1px solid rgba(0, 0, 0, 0.5);
 }
 
 input {
@@ -55,8 +57,8 @@ input:focus {
 .searchBtn {
     width: 100px;
     background-color: white;
-    border: 2px solid black;
-    border-radius: 5px;
+    border: 1px solid rgba(0, 0, 0, 0.5);
+    border-radius: 15px;
     padding: 5px;
     margin: 0;
     color: black;
