--- a/src/Components/StudyDetail/StudyDetail.css
+++ b/src/Components/StudyDetail/StudyDetail.css
@@ -3,20 +3,47 @@
     margin: 0 200px;
     margin-top: 30px;
     padding: 20px;
-    background-color: black;
+
     border-radius: 5px;
     display: flex;
     flex-wrap: wrap;
 }
 
+.StudyDetail-TOP > div > div {
+    margin-bottom: 5px;
+}
+
 .StudyDetail-TOP {
-    width: 70%;
+    width: 600px;
     text-align: left;
+    background-color: rgb(142, 185, 145);
+    padding: 20px;
+    padding-left: 40px;
+    margin: auto;
+    font-size: 20px;
+    border-radius: 25px;
+}
+
+.StudyDetail-title {
+    font-weight: 400;
+    font-size: 30px;
+    margin-bottom: 40px;
+    margin-top: 20px;
+}
+
+.StudyDetail-member-num {
+    float: right;
 }
 
 .StudyDetail-IMAGE {
-    width: 30%;
+    width: 230px;
+    height: 230px;
+    margin: auto;
+    border-radius: 50%;
+    margin-bottom: 30px;
+    border: 7px solid rgb(201, 228, 197);
 }
+
 .StudyDetailBtn-box {
     display: flex;
     width: 100%;
@@ -28,12 +55,38 @@
     display: flex;
     background-color: white;
     color:black;
-    padding: 2px 5px;
+    padding: 10px 30px;
     justify-content: center;
     align-items: center;
     font-size: 20px;
+    background-color: rgb(193, 172, 149);
+    color: white;
+    font-size: 20px;
+    margin-top: 30px;
+    border-radius: 50px;
+    font-weight: 500;
+}
+
+.StudyDetailBtn-box > a:hover {
+    background-color: rgba(0, 30, 0, 0.5);
+    transform: scale(1.06);
+    transition: 0.2s;
 }
 
 .applyCancelBtn, .applyBtn, .canNotBtn {
     color: black;
+}
+
+.StudyDetail-tagName {
+    padding: 3px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(201, 228, 197);
+    border-radius: 15px;
+    margin-bottom: 4px;
+    color: black;
+    font-size: 15px;
+    font-weight: 500;
 }
