--- a/src/Components/KakaoMap/KakaoMap.css
+++ b/src/Components/KakaoMap/KakaoMap.css
@@ -2,9 +2,7 @@
     width: 100%;
     background-color: white;
     margin: 0 auto;
-    border-radius: 5px;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    border-radius: 15px;
 }
 
 .title {
@@ -67,8 +65,17 @@
     justify-content: center;
 }
 
+.Location-name-input {
+    height: 40px;
+    box-sizing: border-box;
+    padding: 3px 10px;
+    border: 3px solid black
+}
+
 .LocationSearch-box > .LocationSearchBtn {
     color: black;
+    height: 40px;
+    box-sizing: border-box;
 }
 
 .rightMap {
