--- a/src/Components/MyPage/MyPage.css
+++ b/src/Components/MyPage/MyPage.css
@@ -9,7 +9,7 @@
 .image {
     width: 110px;
     height: 110px;
-    border: black;
+    border: 3px solid rgb(250, 235, 224);
     border-radius: 90px;
     background-color: white;
 }
@@ -25,6 +25,7 @@
     height: 180px;
     margin: 0 auto;
     margin-top: 4px;
+    border-radius: 15px;
 }
 
 .contentBox {
@@ -75,26 +76,31 @@
     width: 200px;
     margin: 0 auto;
     border-radius: 50px;
-    background-color: white;
+    background-color: rgb(201, 228, 197);
     padding: 10px 80px;
 }
 
 .updateBtn:hover {
-    background-color: rgba(0, 100, 0, 0.5);
+    background-color: rgb(181, 205, 163);
     color: white;
 }
 
 .MyPageTag {
     display: flex;
     margin: 0 10px;
-    border-radius: 5px;
-    background-color: white;
-    border: 1px solid black;
     padding: 3px 3px;
     white-space : nowrap;
     color: black;
     justify-content: center;
     align-items: center;
+    color: black;
+    margin-left: 3px;
+    border-radius: 20px;
+    padding: 2px 8px;
+    background-color: rgb(250, 235, 224);
+}
+.info > div {
+    color: black;
 }
 
 .info > div > .tags {
@@ -112,6 +118,7 @@
     justify-content: center;
     height: 80px;
     margin-bottom: 20px;
+    margin-top: 30px;
 }
 
 .middle {
@@ -125,57 +132,81 @@
 .MyPage > .middle > .profile-box{
     width: 320px;
     height: 300px;
-    background-color: rgba(0, 40, 0, 0.5);
+    background-color: rgb(193, 172, 149);
     margin: 0;
-    border-radius: 5px;
+    border-radius: 15px;
+    -webkit-box-shadow: 7px 7px 9px -3px rgba(0,0,0,0.54); 
+    box-shadow: 7px 7px 9px -3px rgba(0,0,0,0.54);
 }
 
 .MyPage > .middle > .location-box{
     width: 320px;
     height: 300px;
-    background-color: black;
+    background-color: rgb(193, 172, 149);
     margin: 0;
-    border-radius: 5px;
+    border-radius: 15px;
+    -webkit-box-shadow: 7px 7px 9px -3px rgba(0,0,0,0.54); 
+    box-shadow: 7px 7px 9px -3px rgba(0,0,0,0.54);
 }
 
 .box-title {
-    font-weight: bold;
+    font-weight: 400;
     font-size: 20px;
+    color: black;
 }
 
 .top-title {
-    font-weight: bold;
+    font-weight: 500;
     font-size: 32px;
     color: black;
 }
 
 .apply {
     width: 100%;
-    background-color: black;
-    border-radius: 5px;
 }
 
 .apply-title {
     font-size: 20px;
-    font-weight: 700;
-    border-bottom: 2px solid whitesmoke;
+    font-weight: 400;
+    border-bottom: 10px solid rgb(250, 235, 224);
+    background-color: rgb(193, 172, 149);
+    color: black;
+    border-radius: 15px 15px 0 0;
+    -webkit-box-shadow: 7px 7px 9px -3px rgba(0,0,0,0.54); 
+    box-shadow: 7px 7px 9px -3px rgba(0,0,0,0.54);
+    padding: 5px 0;
 }
 
 .apply-content {
     width: 100%;
+    height: 500px;
+    background-color: rgb(193, 172, 149);
+    margin-bottom: 30px;
+    border-radius: 0 0 15px 15px;
+    -webkit-box-shadow: 7px 7px 9px -3px rgba(0,0,0,0.54); 
+    box-shadow: 7px 7px 9px -3px rgba(0,0,0,0.54);
 }
 
 .apply-info {
-    border-bottom: 1px solid white;
+    border-bottom: 2px solid black;
     width: 100%;
     display: flex;
     justify-content: space-between;
-    padding: 2px 10px;
+    padding: 4px 10px;
+    color: black;
 }
 
 .status-icon {
     display: flex;
     justify-content: center;
     align-items: center;
-    color: white;
+    color: black;
+}
+
+.status-icon:hover {
+    color: black;
+}
+
+.info-name {
+    font-size: 19px;
 }
