--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,16 @@
-div {
+
+div{
+  text-decoration: none;
+}
+div :link:visited:hover {
   display: block;
+  text-decoration: none;
+}
+a{
+  text-decoration: none;
+}
+a :link:visited:hover{
+  text-decoration: none;
 }
 
 .App {
@@ -10,6 +21,7 @@ div {
   scrollbar-width: none;
   -ms-overflow-style: none;
   font-family: 'Jua', sans-serif;
+  position: relative;
 }
 
 .App::-webkit-scrollbar {
@@ -30,14 +42,18 @@ div {
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
 }
 
 .footer-box {
-  padding: 0px 30px;
   display: flex;
   align-items: center;
   justify-content: center;
   border-top: 1px solid #DEE1E6;
+  position: relative;
+  bottom: 0;
+  width: 100%;
+  margin-top: 30px;
 }
 
 
