--- a/src/Components/GatheringList/GatheringList.css
+++ b/src/Components/GatheringList/GatheringList.css
@@ -15,13 +15,21 @@
 .gatheringTitle {
     font-size: 32px;
     color: black;
-    font-weight: 700;
+    font-weight: 400;
 }
 
 td > .attendBtn {
-    background-color: black;
-    color: white;
+    background-color: rgb(201, 228, 197);
+    color: black;
+    padding: 7px 14px;
+    border-radius: 10px;
+    text-decoration: none;
 }
+
+td > .attendBtn:hover {
+    background-color: rgb(181, 205, 163);
+}
+
 
 td {
     padding: 2px 10px;
@@ -38,7 +46,8 @@ td > a {
 .gatheringList-content {
     height: 500px;
     overflow-y: scroll;
-    border: 3px solid black;
+    border-radius: 15px;
     width: 70%;
     margin: auto;
+    background-color: rgb(193, 172, 149);
 }
