--- a/src/Components/GatheringSide/GatheringSide.css
+++ b/src/Components/GatheringSide/GatheringSide.css
@@ -4,15 +4,22 @@
     float: left;
     background-color: white;
     height: 100%;
-    padding-right: 20px;
+    background-color: rgb(250, 235, 224);
 }
 
 .StudyRoom-side > section {
     display: block;
     width: 100%;
-    margin-left: 20px;
     text-align: left;
     margin-top: 20px;
+}
+
+.menuBtn-box {
+    width: 100%;
+    height: 30px;
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
 }
 
 .StudyRoom-side > section > Link {
@@ -56,22 +63,46 @@
     text-decoration:none;
 }
 
-.menuTitle-box {
-    border-bottom: 1px solid rgb(193, 172, 149);
+.menuTitle-gathering {
+    margin-left: 0px;
+    margin-bottom: 5px;
+    font-size: 20px;
+    font-weight: 400;
+    color: black;
+    text-decoration:none;
+    width: 100%;
     padding-left: 10px;
 }
 
-ul > li {
-    margin-bottom: 10px;
+.menuTitle-gathering:hover {
+    color: black;
+    background-color: rgb(193, 172, 149);
+}
+
+.menuTitle-box {
+    border-bottom: 1px solid rgb(193, 172, 149);
+    display: flex;
+    width: 100%;
 }
 
 .menuBtn {
-    border-radius: 10px;
+    width: 100%;
+    height: 100%;
     padding: 5px;
+    color: black;
+    padding-left: 30px;
+    text-align: left;
+    box-sizing: border-box;
 }
 
 .menuBtn:hover {
+    background-color: rgb(193, 172, 149);
+    color: black;
+}
+
+.menuBtn:active {
     background-color: rgb(201, 228, 197);
+    color: black;
 }
 
 .menuBtn{ color: black; text-decoration:none;}
