--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -2,20 +2,41 @@
     width: 100%;
     height: 100px;
     display: flex;
-    align-items: center;
     justify-content: space-between;
-    background-color: rgb(250, 235, 224);
-    border-bottom: 2px solid rgba(193, 172, 149, 0.5);
+    align-items: center;
+    background-color: white;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2), 0 1px 0 rgba(0, 0, 0, 0.2);
+    margin-bottom: 10px;
+}
+
+.nav-box {
+    display: flex;
 }
 
 .logo {
-    width: 300px;
+    width: 350px;
     margin: 40px;
     font-size: 35px;
     text-decoration:none;
     font-weight: bold;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: 'Nunito', sans-serif;
     color: black;
+    display: flex;
+}
+
+.logo-image {
+    width: 50px;
+    height: 50px;
+    margin-right: 10px;
+}
+
+.logo-image-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50px;
+    height: 50px;
+    background-color: white;
 }
 
 .loginBtn {
@@ -29,26 +50,31 @@
 }
 
 .nav {
-    width: 200px;
+    width: 220px;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
 .nav > .navBtn-Box {
-    display: inline;
+    display: flex;
     text-decoration:none;
+    color: rgba(0, 0, 0, 0.4);
+    align-content: center;
+    justify-content: center;
 }
 
 .nav > .navBtn-Box:hover {
     transform: scale(1.1);
     transition: 0.5s;
+    color: black;
 }
 
 .nav > .navBtn-Box >.navBtn {
-    font-weight: bold;
-    color: black;
+    font-weight: 400;
+    margin-left: 6px;
 }
+
+
 a{color: black;}
-a:link { color: black; }
 a:visited { color: black; }
