--- a/src/Components/KakaoLogin/KakaoLogin.css
+++ b/src/Components/KakaoLogin/KakaoLogin.css
@@ -1,16 +1,15 @@
 .mainView {
-    width: 300px;
+    width: 200px;
     display: flex;
     justify-content: right;
     align-items: center;
+    margin-left: 20px;
 }
 
 .mainView > a {
-    border: 2px solid rgb(250, 235, 224);
     border-radius: 5px;
     text-decoration:none;
-    background-color: rgb(250, 235, 224);
-    color: black;
+    background-color: white;
     margin-right: 10px;
 }
 
@@ -21,11 +20,26 @@
 
 .logout_Btn{
     width: 100px;
-    color: black;
-    font-size: 25px;
-    font-weight: bold;
+    font-size: 20px;
+    font-weight: 400;
+    color: rgba(0, 0, 0, 0.4);
+}
+.logout_Btn:hover {
+    color: rgba(0, 0, 0, 0.8);
 }
 
-.logout_Btn{color: black; text-decoration: none;}
-.logout_Btn:visited{color: black; text-decoration: none;}
-.logout_Btn:link{color: black; text-decoration: none;}
+.MyPage-btn {
+    display: flex;
+    align-self: center;
+    justify-content: center;
+    font-weight: 500;
+    color: rgba(0, 0, 0, 0.4);
+}
+
+.MyPage-btn:hover {
+    color: rgba(0, 0, 0, 0.8);
+}
+
+.navBtn {
+    margin-left: 6px;
+}
