--- a/src/Components/LocationUpdate/LocationUpdate.css
+++ b/src/Components/LocationUpdate/LocationUpdate.css
@@ -10,23 +10,31 @@
     margin: 0 auto;
     width: 100%;
     height: 600px;
-    background-color: #D7EAA3;
+    background-color: rgb(193, 172, 149);
     position: relative;
     box-sizing: border-box;
     display: flex;
     justify-content: center;
     flex-direction: column;
-    border-radius: 5px;
+    border-radius: 15px;
+    -webkit-box-shadow: 7px 7px 9px -3px rgba(0,0,0,0.54); 
+    box-shadow: 7px 7px 9px -3px rgba(0,0,0,0.54);
 }
-.Location-updateBtn {
+.Location-updateBtn{
     width: 100px;
     margin: 20px auto;
     margin-top: 50px;
     margin-bottom: 10px;
-    border: 1px solid black;
-    border-radius: 5px;
-    background-color: white;
+    border-radius: 15px;
+    background-color: rgb(201, 228, 197);
     padding: 5px 10px;
+    text-decoration: none;
+    color: black;
+}
+
+.Location-updateBtn:hover {
+    color: black;
+    background-color: rgb(181, 205, 163);
 }
 
 .LocationContents > .LocationSearch-box {
@@ -39,7 +47,7 @@
 
 .LocationNameInput {
     width: 80%;
-    border: 1px solid black;
+    border-bottom: 1px solid black;
     padding: 1px;
     height: 40px;
     box-sizing: border-box;
@@ -55,7 +63,7 @@
     justify-content: center;
     align-items: center;
     background-color: rgb(201, 228, 197);
-    border: 1px solid black;
+    text-decoration: none;
 }
 
 .LocationSearchBtn:hover {
@@ -96,4 +104,10 @@
 .scrollRef {
     width: 400px;
     height: 4px;
+}
+
+.location-modalTitle {
+    font-weight: 400;
+    font-size: 30px;
+    margin: 30px 0;
 }
