--- a/src/Components/MakeStudy/MakeStudy.css
+++ b/src/Components/MakeStudy/MakeStudy.css
@@ -131,8 +131,9 @@
     width: 100%;
     height: 300px;
     background-color: white;
-    border-radius: 5px;
+    border-radius: 15px;
     border: 3px solid rgb(193, 172, 149);
+    padding: 10px;
 }
 
 .contentTitle {
@@ -165,6 +166,7 @@
     background-color: rgb(201, 228, 197);
     border-radius: 5px;
     color: black;
+    text-decoration: none;
 }
 
 .finishBtn:hover {
@@ -199,6 +201,7 @@
     margin-right: 10px;
     color: black;
     border: 3px solid rgb(193, 172, 149);
+    border-radius: 15px;
 }
 
 
@@ -215,6 +218,7 @@ Select > div{
     border-radius: 5px;
     justify-content: space-between;
     align-items: center;
+    padding-left: 10px;
 }
 
 .tagDeleteBtn {
@@ -224,9 +228,9 @@ Select > div{
     margin-right: 5px;
 }
 
-div {
+/* div {
     color: black;
-}
+} */
 
 .col-md-4 > div > * {
     color: black;
@@ -236,9 +240,9 @@ div {
     color: black;
 }
 
-a{color: black; text-decoration: none;}
+/* a{color: black; text-decoration: none;}
 a:visited{color: black; text-decoration: none;}
-a:link{color: black; text-decoration: none;}
+a:link{color: black; text-decoration: none;} */
 
 textarea {
     resize: none;
@@ -247,6 +251,7 @@ textarea {
 .study_map {
     border: 3px solid rgb(193, 172, 149);
     margin-top: 30px;
+    border-radius: 15px;
 }
 
 .countTitle {
