--- a/src/Components/StudyDetail/StudyDetail.css
+++ b/src/Components/StudyDetail/StudyDetail.css
@@ -65,6 +65,7 @@
     margin-top: 30px;
     border-radius: 50px;
     font-weight: 500;
+    text-decoration: none;
 }
 
 .StudyDetailBtn-box > a:hover {
