feat: 서버 이전으로 인한 주소 변경, readme 수정   css: 채팅방 시간폼 변경

--- a/src/Components/MakeStudy/MakeStudy.css
+++ b/src/Components/MakeStudy/MakeStudy.css
@@ -252,6 +252,7 @@ textarea {
     border: 3px solid rgb(193, 172, 149);
     margin-top: 30px;
     border-radius: 15px;
+    z-index: 0;
 }
 
 .countTitle {
@@ -264,4 +265,8 @@ textarea {
     background-color: rgb(250, 235, 224);
     border-radius: 50%;
     margin-right: 10px;
+}
+
+.col-md-5 {
+    z-index: 3;
 }
