--- a/src/Components/MakeChat/MakeChat.css
+++ b/src/Components/MakeChat/MakeChat.css
@@ -15,22 +15,32 @@
 }
 
 .makeChat-name {
-    border: 1px solid black;
+    border: 3px solid rgb(201, 228, 197);
     padding: 4px;
     width: 300px;
-    height: 60px;
+    height: 50px;
     box-sizing: border-box;
+    border-radius: 25px 0 0 25px;
+    padding-left: 20px;
+    border-right: 0;
 } 
 
 .makeChat-btn {
-    padding: 4px;
-    width: 100px;
-    height: 60px;
+    padding: auto;
+    width: 60px;
+    height: 50px;
     box-sizing: border-box;
     border: 0px;
     background-color: rgb(201, 228, 197);
+    border-radius: 0 25px 25px 0;
+    box-sizing: border-box;
 }
 
 .makeChat-btn:hover {
     background-color: rgb(181, 205, 163);
+}
+
+.fas fa-plus {
+    display: block;
+    margin: auto;
 }
