--- a/src/Components/MakeGathering/MakeGathering.css
+++ b/src/Components/MakeGathering/MakeGathering.css
@@ -44,11 +44,13 @@
 .react-datepicker-wrapper{
     width: 300px;
     height: 45px;
+    z-index: 4;
 }
 
 .react-datepicker__input-container {
     width: 100%;
     height: 100%;
+    z-index: 4;
 }
 
 .datePicker {
@@ -60,6 +62,11 @@
     padding: 0;
     padding-left: 10px;
     border: 3px solid rgb(193, 172, 149);
+    z-index: 4;
+}
+
+.react-datepicker div{
+    z-index: 4;
 }
 
 .timePicker {
@@ -154,9 +161,6 @@
     border-radius: 15px;
 }
 
-.react-datepicker {
-    z-index: 3;
-}
 
 .MakeGathering-Btn {
     padding: 10px 20px;
