--- a/src/Components/UpdateGathering/UpdateGathering.css
+++ b/src/Components/UpdateGathering/UpdateGathering.css
@@ -153,8 +153,8 @@
     border-radius: 15px;
 }
 
-.react-datepicker {
-    z-index: 3;
+.react-datepicker-popper {
+    z-index: 4;
 }
 
 .MakeGathering-Btn {
